extra spacing fix 1

--- a/src/App.css
+++ b/src/App.css
@@ -3,21 +3,22 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
+  body,
+  html {
+    /* margin: 0;
+    padding: 0; */
+    /* width: 100%;
+    height: 100%; */
     overflow-x: hidden;
   }
 }
 
 @media screen and (max-width: 992px) and (min-width: 601px) {
   body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
+    /* margin: 0;
+    padding: 0; */
+    /* width: 100%;
+    height: 100%; */
     overflow-x: hidden;
   }
 }
